--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -38,6 +38,9 @@
       <li class="nav-item mr-4">
         <a class="nav-link" href="#" [routerLink]="['/contact']">Contact </a>
       </li>
+      <li class="nav-item mr-4">
+        <a class="nav-link" href="#" [routerLink]="['/forms']">Forms </a>
+      </li>
 
 
     </ul>
