--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -1,8 +1,8 @@
 
 <div class="row">
-  <div class="col-md-4 boxed">Column 1
+  <div class="col-md-4 boxed pl-3">
 
-    <div class="card">
+    <div class="card mt-2">
       <div class="card-header">Input</div>
       <div class="card-body">
         <form>
