--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -20,11 +20,21 @@
                      [(ngModel)]="age">
             </div>
           </div>
+
+          <div class="form-group row">
+            <label for="bets" class="col-sm-4 col-form-label">Bets</label>
+            <div class="col-sm-8">
+              <input type="text" class="form-control" id="bets" name="luckies" placeholder="user's lucky numbers"
+                     [(ngModel)]="lucky_numbers">
+            </div>
+          </div>
+
         </form>
         <button class="btn btn-outline-success" (click)="submit()">Submit</button>
+        <button class="btn btn-outline-success" (click)="compute_sum()">Compute Sum</button>
       </div>
       <div class="card-footer">
-        User: {{user}}, Age:{{ageint}}
+        User: {{user}}, Age:{{ageint}}, Wynik:{{wynik}}
       </div>
     </div>
   </div>
