--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -5,14 +5,24 @@
     <div class="card mt-2">
       <div class="card-header">Input</div>
       <div class="card-body">
-        <form>
+
+        <form autocomplete="off">
           <div class="form-group row">
             <label for="user" class="col-sm-4 col-form-label">User</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="user" name="user" placeholder="user name"
-                     [(ngModel)]="user">
+              <input type="text" class="form-control" id="user" name="user"
+                     placeholder="user name" [(ngModel)]="user">
             </div>
           </div>
+
+          <div class="form-group row">
+            <label for="age" class="col-sm-4 col-form-label">Password</label>
+            <div class="col-sm-8">
+              <input type="password" class="form-control" id="pass" name="pass" placeholder="password"
+                     [(ngModel)]="pass">
+            </div>
+          </div>
+
           <div class="form-group row">
             <label for="age" class="col-sm-4 col-form-label">Age</label>
             <div class="col-sm-8">
@@ -29,8 +39,13 @@
             </div>
           </div>
 
+          <p class="text-right">
+            <button class="btn btn-outline-primary text-right" (click)="submit()">Send it</button>
+            <button class="btn btn-outline-primary text-right" (click)="compute_sum()">Double it</button>
+          </p>
+
         </form>
-        <button class="btn btn-outline-success" (click)="submit()">Submit</button>
+
         <button class="btn btn-outline-success" (click)="compute_sum()">Compute Sum</button>
       </div>
       <div class="card-footer">
