Setting new/custom champion name in forms

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-4 boxed"></div>
   <div class="col-md-4 text-center boxed" style="padding-top: 5%">
     <h1> Sunny day </h1>
-    <img class="img-fluid" src="assets/mL.png">
+    <img class="img-fluid" src="assets/mL.png" (click)="set_champion('Sunny day')">
     <h3> Fun Page</h3>
     <p> (coming soon..)</p>
   </div>
@@ -21,6 +21,24 @@
         <button class="btn btn-outline-info" (click)="set_champion('Veigar')">Veigar </button>
         <button class="btn btn-outline-info" (click)="set_champion('Morgana')">Morgana </button>
         <button class="btn btn-outline-info" (click)="set_champion('Lux')">Lux </button>
+
+        <form>
+          <div class="form-group row">
+            <label for="edit_champion" class="col-sm-4 col-form-label">Custom champion</label>
+            <div class="col-sm-8">
+              <input type="text" class="form-control"
+                     id="edit_champion"
+                     name="edit_champion" placeholder="password"
+                     [(ngModel)]="new_champion">
+
+              <button class="btn btn-outline-info" (click)="update_champion()">Set champion</button>
+
+
+            </div>
+          </div>
+
+        </form>
+
       </div>
 
     </div>
