--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,7 +28,7 @@
             <div class="col-sm-8">
               <input type="text" class="form-control"
                      id="edit_champion"
-                     name="edit_champion" placeholder="password"
+                     name="edit_champion" placeholder="(champion)"
                      [(ngModel)]="new_champion">
 
               <button class="btn btn-outline-info" (click)="update_champion()">Set champion</button>
