--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,6 +43,27 @@
 
     </div>
 
+    <div class="card">
+      <div class="card-header">Sprawdzanie parzystości</div>
+      <form>
+        <div class="form-group row">
+          <label for="liczba" class="col-sm-4 col-form-label">Custom champion</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control"
+                   id="liczba"
+                   name="edit_champion" placeholder="(podaj liczbę)"
+                   [(ngModel)]="liczba">
+
+            <button class="btn btn-outline-info" (click)="check_parity()">Check parity</button>
+
+
+          </div>
+        </div>
+
+      </form>
+    </div>
+    <div class="card-footer"></div>
   </div>
+
 </div>
 
