--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -34,9 +34,8 @@
         </div>
       </li>
 
-
       <li class="nav-item mr-4">
-        <a class="nav-link" href="#" [routerLink]="['/contact']">Contact </a>
+        <a class="nav-link" href="#" [routerLink]="['/kalkulator']">Kalkulator </a>
       </li>
       <li class="nav-item mr-4">
         <a class="nav-link" href="#" [routerLink]="['/forms']">Forms </a>
