--- a/src/app/kalkulator/kalkulator.component.html
+++ b/src/app/kalkulator/kalkulator.component.html
@@ -29,10 +29,15 @@
             </div>
           </div>
 
+          <p class="text-center">
+            <button class="btn btn-outline-info" (click)="computeSum()">Licz sumę</button>
+          </p>
+
       </form>
     </div>
     <div class="card-footer">
-      Wynik: {{wynik}}
+      Wynik: {{wynik}} <br>
+      Najbliższy kwadrat: {{kwadrat}}
     </div>
   </div>
 </div>
