--- a/src/app/kalkulator/kalkulator.component.html
+++ b/src/app/kalkulator/kalkulator.component.html
@@ -1,37 +1,67 @@
-<div class="row">
+<div class="row no-gutters">
 
   <div class="col-md-6">
-    Kolumna 1
     <div class="card">
       <div class="card-header">
-        Proste obliczenia
+      <!--  todo: grupa B -- spróbować napisać ten komponent       -->
+        Liczenie sumy 1..n
       </div>
       <div class="card-body">
         <form>
           <div class="form-group row">
-            <label for="liczba1" class="col-md-4 col-form-label">Liczba 1</label>
+            <label for="liczba1N" class="col-md-4 col-form-label">Liczba 1</label>
             <div class="col-md-8">
               <input type="text" class="form-control"
-                     id="liczba1"
-                     name="liczba1" placeholder="(podaj liczbę)"
-                     [(ngModel)]="liczbaA">
+                     id="liczba1N"
+                     name="liczba1N" placeholder="(podaj liczbę)"
+                     [(ngModel)]="liczba1N">
 
             </div>
           </div>
-          <div class="form-group row">
-            <label for="liczba2" class="col-md-4 col-form-label">Liczba 2</label>
-            <div class="col-md-8">
-              <input type="text" class="form-control"
-                     id="liczba2"
-                     name="liczba2" placeholder="(podaj liczbę)"
-                     [(ngModel)]="liczbaB">
-
-            </div>
-          </div>
-
           <p class="text-center">
-            <button class="btn btn-outline-info" (click)="computeSum()">Licz sumę</button>
+            <button class="btn btn-outline-info"
+                    (click)="wynik1N = computeSum1N(liczba1N)">Licz sumę</button>
           </p>
+
+      </form>
+    </div>
+    <div class="card-footer">
+      Wynik: {{wynik1N}}
+    </div>
+  </div>
+</div>
+
+<div class="col-md-6">
+  <div class="card">
+    <div class="card-header">
+      Proste obliczenia
+    </div>
+    <div class="card-body">
+      <form>
+        <div class="form-group row">
+          <label for="liczba1" class="col-md-4 col-form-label">Liczba 1</label>
+          <div class="col-md-8">
+            <input type="text" class="form-control"
+                   id="liczba1"
+                   name="liczba1" placeholder="(podaj liczbę)"
+                   [(ngModel)]="liczbaA">
+
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="liczba2" class="col-md-4 col-form-label">Liczba 2</label>
+          <div class="col-md-8">
+            <input type="text" class="form-control"
+                   id="liczba2"
+                   name="liczba2" placeholder="(podaj liczbę)"
+                   [(ngModel)]="liczbaB">
+
+          </div>
+        </div>
+
+        <p class="text-center">
+          <button class="btn btn-outline-info" (click)="computeSum()">Licz sumę</button>
+        </p>
 
       </form>
     </div>
@@ -40,10 +70,6 @@
       Najbliższy kwadrat: {{kwadrat}}
     </div>
   </div>
-</div>
-
-<div class="col-md-6">
-  Kolumna 2
 </div>
 
 
