--- a/src/app/kalkulator/kalkulator.component.html
+++ b/src/app/kalkulator/kalkulator.component.html
@@ -11,8 +11,7 @@
           <div class="form-group row">
             <label for="liczba1N" class="col-md-4 col-form-label">Liczba 1</label>
             <div class="col-md-8">
-              <input type="text" class="form-control"
-                     id="liczba1N"
+              <input type="text" class="form-control" id="liczba1N"
                      name="liczba1N" placeholder="(podaj liczbę)"
                      [(ngModel)]="liczba1N">
 
