--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -40,6 +40,9 @@
       <li class="nav-item mr-4">
         <a class="nav-link" href="#" [routerLink]="['/forms']">Forms </a>
       </li>
+      <li class="nav-item mr-4">
+        <a class="nav-link" href="#" [routerLink]="['/wonder']">WonderView </a>
+      </li>
 
 
     </ul>
