komponent kantoru walutowego

--- a/src/app/kalkulator/kalkulator.component.html
+++ b/src/app/kalkulator/kalkulator.component.html
@@ -29,7 +29,7 @@
       Wynik: {{wynik1N}}
     </div>
   </div>
-    <app-auction></app-auction>
+    <app-auction [first_bid]="10"></app-auction>
 </div>
 
 <div class="col-md-6">
@@ -71,6 +71,7 @@
       Najbliższy kwadrat: {{kwadrat}}
     </div>
   </div>
+  <app-kantor></app-kantor>
 </div>
 
 
