--- a/src/app/zadania/auction/auction.component.html
+++ b/src/app/zadania/auction/auction.component.html
@@ -13,7 +13,8 @@
         </div>
       </div>
       <p class="text-center">
-        <button class="btn btn-outline-info" (click)="new_bid(your_bid)">Licytuj</button>
+        <button class="btn btn-outline-info" (click)="new_bid(your_bid)">
+          Licytuj</button>
       </p>
 
     </form>
