--- a/src/app/zadania/kantor/kantor.component.html
+++ b/src/app/zadania/kantor/kantor.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    Komponent aukcyjny
+    Kantor wymiany walut (autoryzowany przez KNF)
   </div>
   <div class="card-body">
     <form>
@@ -46,6 +46,5 @@
     </form>
   </div>
   <div class="card-footer">
-    Najwyższa oferta: {{highest_bid}}
   </div>
 </div>
