--- a/src/app/wonder-view/wonder-view.component.html
+++ b/src/app/wonder-view/wonder-view.component.html
@@ -3,26 +3,52 @@
     <div class="card">
       <div class="card-header">WonderForm</div>
       <div class="card-body">
-
         <form>
-
           <div class="form-group row">
             <label for="X" class="col-md-4 col-form-label">Liczba:</label>
             <div class="col-md-8">
-              <input class="form-control" id="X" name="X" [(ngModel)]="liczba">
+              <input class="form-control" type="text" id="X" name="X" [(ngModel)]="inputtext">
             </div>
           </div>
-
         </form>
-
+        <p class="text-right">
+          <button class="btn btn-outline-info" (click)="dodaj()">Dodaj</button>
+        </p>
 
       </div>
       <div class="card-footer">
-        {{liczba + liczba}}
+        {{wynik}}
       </div>
     </div>
 
 
   </div>
-  <div class="col-md-6">Kolumna 2</div>
+  <div class="col-md-6">
+
+
+    <div class="card">
+      <div class="card-header">Guess the number (0--1000)</div>
+      <div class="card-body">
+        <form>
+          <div class="form-group row">
+            <label for="Y" class="col-md-4 col-form-label">Liczba:</label>
+            <div class="col-md-8">
+              <input class="form-control" type="text" id="Y" name="Y"
+                     [(ngModel)]="guess">
+            </div>
+          </div>
+          <p class="text-right">
+            <button class="btn btn-outline-info" (click)="check()">Sprawdź</button>
+          </p>
+        </form>
+
+      </div>
+      <div class="card-footer">
+        Wynik sprawdzenia: {{wynikSprawdzenia}}
+      </div>
+    </div>
+
+
+
+  </div>
 </div>
