Podstawowe elementy do bucket/water game

--- a/src/app/kalkulator/kalkulator.component.html
+++ b/src/app/kalkulator/kalkulator.component.html
@@ -30,6 +30,7 @@
     </div>
   </div>
     <app-auction [first_bid]="10"></app-auction>
+    <app-guess></app-guess>
 </div>
 
 <div class="col-md-6">
