--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -37,6 +37,11 @@
       <li class="nav-item mr-4">
         <a class="nav-link" href="#" [routerLink]="['/kalkulator']">Kalkulator </a>
       </li>
+
+      <li class="nav-item mr-4">
+        <a class="nav-link" href="#" [routerLink]="['/bucket']">BucketGame </a>
+      </li>
+
       <li class="nav-item mr-4">
         <a class="nav-link" href="#" [routerLink]="['/forms']">Forms </a>
       </li>
