po zajeciach gr B

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -43,6 +43,10 @@
       </li>
 
       <li class="nav-item mr-4">
+        <a class="nav-link" href="#" [routerLink]="['/mtb']">MTB-Shop </a>
+      </li>
+
+      <li class="nav-item mr-4">
         <a class="nav-link" href="#" [routerLink]="['/forms']">Forms </a>
       </li>
       <li class="nav-item mr-4">
