tablice i ich wyświetlanie

--- a/src/app/mtb-shop/mtb-shop.component.html
+++ b/src/app/mtb-shop/mtb-shop.component.html
@@ -26,6 +26,7 @@
       </div>
       <div class="card-footer">
         Podsumowanie zamówienia: artykułów: koszt:
+        <button class="btn btn-outline-success">Suma...</button>
       </div>
     </div>
   </div>
