zapytanie http get po komentarze

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -28,8 +28,8 @@
       <li class="nav-item dropdown">
         <span class="nav-link dropdown-toggle mr-4" id="ab" data-toggle="dropdown"> Projects </span>
         <div class="dropdown-menu" >
-          <a class="dropdown-item" href="#" [routerLink]="['/games']">Games </a>
-          <a class="dropdown-item" href="#" [routerLink]="['/home']">Intelligence </a>
+          <a class="dropdown-item clickable" href="#" [routerLink]="['/games']">Games </a>
+          <a class="dropdown-item" href="#" [routerLink]="['/comments']">Comments </a>
           <a class="dropdown-item" href="#" [routerLink]="['/home']">Hackerspace</a>
         </div>
       </li>
