--- a/src/app/wonder-view/gry/tournament/tournament.component.html
+++ b/src/app/wonder-view/gry/tournament/tournament.component.html
@@ -16,8 +16,9 @@
     </table>
   </div>
   <div class="card-footer">
-    <button class="btn btn-outline-info" (click)="sortuj_wyniki()">
+    <input class="form-control" [(ngModel)]="nowy_wynik">
+    <button class="btn btn-outline-info mr-2" (click)="sortuj_wyniki()">
       sortuj</button>
-    <button class="btn btn-outline-info" (click)="add()">dodaj 100</button>
+    <button class="btn btn-outline-info" (click)="add()">dodaj {{nowy_wynik}}</button>
   </div>
 </div>
