--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="row no-gutters">
-  <div class="col-md-4 boxed"></div>
-  <div class="col-md-4 text-center boxed" style="padding-top: 5%">
+  <div class="col-md-4"></div>
+  <div class="col-md-4 text-center" style="padding-top: 5%">
     <h1> Sunny day </h1>
     <img class="img-fluid" src="assets/mL.png" (click)="set_champion('Sunny day')">
     <h3> Fun Page</h3>
     <p> (coming soon..)</p>
   </div>
 
-  <div class="col-md-4 boxed p-1">
+  <div class="col-md-4">
     <div class="card">
       <div class="card-header"> header</div>
       <div class="card-body">
