--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -1,32 +1,40 @@
 <div class="row no-gutters">
   <div class="col-md-8">
     <div class="card">
-      <div class="card-header h4">Komentarze</div>
-      <div class="card-body">
+      <div class="card-header h4">Komentarze
+        <button class="btn btn-outline-info float-md-right" (click)="load_comments()">(reload)</button>
 
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th> post</th>
-            <th> id</th>
-            <th> name</th>
-            <th> email</th>
-            <th> body</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let c of commentsView">
-            <td>{{c.postId}}</td>
-            <td>{{c.id}}</td>
-            <td>{{c.name}}</td>
-            <td>{{c.email}}</td>
-            <td>{{c.body}}</td>
-          </tr>
-        </tbody>
-      </table>
-        <button class="btn btn-outline-info" (click)="load_comments()">Load comments</button>
-        <button class="btn btn-outline-info" (click)="previous()"> < </button>
-        <button class="btn btn-outline-info" (click)="next()"> > </button>
+      </div>
+      <div class="card-body">
+        <p>
+          <button class="btn btn-outline-info" (click)="previous()"> < </button>
+          <span>Page {{start / pageSize + 1}} / {{max_page()}}</span>
+          <button class="btn btn-outline-info float-md-right" (click)="next()"> > </button>
+        </p>
+        <div class="table-responsive-md">
+          <table class="table table-hover">
+            <thead>
+            <tr>
+              <!-- todo: kolumny mają być stabilne-->
+              <th width="5%"> post</th>
+              <th width="5%"> id</th>
+              <th width="30%" (click)="sort_by_name()"> name</th>
+              <th width="30%"> email</th>
+              <th width="30%"> body</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let c of commentsView">
+              <td>{{c.postId}}</td>
+              <td>{{c.id}}</td>
+              <td>{{c.name}}</td>
+              <td>{{c.email}}</td>
+              <td [title]="c.body">{{c.body.substr(0,40)}}</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+
 
       </div>
     </div>
