--- a/src/app/wonder-view/wonder-view.component.html
+++ b/src/app/wonder-view/wonder-view.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row no-gutters">
   <div class="col-md-6">
     <div class="card">
       <div class="card-header">WonderForm</div>
