modale do tournament

--- a/src/app/wonder-view/gry/tournament/tournament.component.html
+++ b/src/app/wonder-view/gry/tournament/tournament.component.html
@@ -16,9 +16,45 @@
     </table>
   </div>
   <div class="card-footer">
-    <input class="form-control" [(ngModel)]="nowy_wynik">
-    <button class="btn btn-outline-info mr-2" (click)="sortuj_wyniki()">
-      sortuj</button>
-    <button class="btn btn-outline-info" (click)="add()">dodaj {{nowy_wynik}}</button>
+    <form>
+      <div class="form-group row">
+        <div class="col-md-6">
+          <input class="form-control" name="nowyw" [(ngModel)]="nowy_wynik">
+        </div>
+        <div class="col-md-6">
+          <button class="btn btn-outline-info mr-2" (click)="sortuj_wyniki()">
+            sortuj</button>
+          <button class="btn btn-outline-info" (click)="add()">dodaj {{nowy_wynik}}</button>
+          <button class="btn btn-outline-success" (click)="prepareModal()" data-toggle="modal" data-target="#aaamodal">Mmm..</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+
+<!--Modals-->
+<div class="modal text-dark" id="aaamodal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Wybrane elementy</h5>
+      </div>
+      <div class="modal-body">
+        <p>
+          Duze wyniki: {{large_results}}
+        </p>
+        <p>
+          Parzyste wyniki: {{even_results}}
+        </p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-warning" data-dismiss="modal">
+          Porzuć
+        </button>
+        <button type="button" class="btn btn-outline-info" data-dismiss="modal">
+          Zapisz
+        </button>
+      </div>
+    </div>
   </div>
 </div>
