--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -30,6 +30,7 @@
         <div class="dropdown-menu" >
           <a class="dropdown-item clickable" href="#" [routerLink]="['/games']">Games </a>
           <a class="dropdown-item" href="#" [routerLink]="['/comments']">Comments </a>
+          <a class="dropdown-item" href="#" [routerLink]="['/modals']">Modals </a>
           <a class="dropdown-item" href="#" [routerLink]="['/home']">Hackerspace</a>
         </div>
       </li>
