--- a/src/app/modals/results/results.component.html
+++ b/src/app/modals/results/results.component.html
@@ -23,6 +23,7 @@
             sort</button>
           <button class="btn btn-outline-info mr-2">add {{nowy_wynik}}</button>
           <button class="btn btn-outline-success"
+                  (click)="prepareReport()"
                   data-toggle="modal"
                   data-target="#aaamodal">Report..</button>
         </div>
@@ -33,18 +34,23 @@
 
 <!--Modals-->
 <div class="modal text-dark" id="aaamodal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog  modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Wybrane elementy</h5>
+        <h5 class="modal-title">Summary of the results</h5>
       </div>
       <div class="modal-body">
-        <p>
-          Duze wyniki: {{large_results}}
-        </p>
-        <p>
-          Parzyste wyniki: {{even_results}}
-        </p>
+        <div class="row">
+          <div class="col-md-4 text-center">
+            <app-ttableview [toptitle]="'Large results'" [numbers]="large_results" ></app-ttableview>
+          </div>
+          <div class="col-md-4 text-center">
+            <app-ttableview [toptitle]="'Small results'" [numbers]="small_results" ></app-ttableview>
+          </div>
+          <div class="col-md-4 text-center">
+            <app-ttableview [toptitle]="'Even results'" [numbers]="even_results" ></app-ttableview>
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-warning" data-dismiss="modal">
