--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -16,13 +16,8 @@
     <ul class="navbar-nav" >
 
 
-      <li class="nav-item dropdown">
-        <span class="nav-link dropdown-toggle mr-4" id="aa" data-toggle="dropdown"> About </span>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#" [routerLink]="['/home']">Highlights</a>
-          <a class="dropdown-item" href="#" [routerLink]="['/home']">Team </a>
-          <a class="dropdown-item" href="#" [routerLink]="['/home']">Fun </a>
-        </div>
+      <li class="nav-item mr-4">
+        <a class="nav-link" href="#" [routerLink]="['/about']">about </a>
       </li>
 
       <li class="nav-item dropdown">
